--- a/my webby - Copy/Cindex.css
+++ b/my webby - Copy/Cindex.css
@@ -1,10 +1,35 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 :root {
   --WALLPAPER-color: #0a190e;
-  --font-color: #dfd0d0;
+  --font-color: #ffffff;
+  --font-family: 'Open Sans', sans-serif;
+  --font-weight-thin: 300;
 }
+
+#ResumeLink{
+  outline: 1.4px solid gold; /* Outline color and width */
+}
+
+body, html, #animated-text, .H1class  {
+font-family: var(--font-family);
+font-weight: var(--font-weight-thin); 
+}
+
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end; /* Change this line to align items to the right */
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+nav ul li {
+  margin-left: 1rem; /* Add this line to add some space between nav items */
+}
+
+
 
 #homepage-nav {
   display: flex;
@@ -15,17 +40,19 @@
   position: fixed;
   width: 100%;
   z-index: 1;
-  top: 2rem; /* 2rem under top for desktop */
+  top: 2rem;
+  /* 2rem under top for desktop */
 }
 
 #mainbody {
-  font-family: 'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   overflow-y: hidden;
-  font-size: 18px;
-  background-color: var(--WALLPAPER-color);
+  font-size: 1rem;
+  /* background-color: var(--WALLPAPER-color); */
+  /*resources images PCwall*/
+  background-image: url(resources/pcwallpaper.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100vw 100vh;
@@ -38,6 +65,8 @@ body {
   margin: 0;
   padding: 0;
 }
+
+
 
 .logo {
   display: flex;
@@ -58,57 +87,79 @@ body {
 }
 
 #mainfoot {
-  background-color: rgba(255, 255, 255, 0);
-  text-align: center;
+  border: #363636;
+  text-align: left;
   position: fixed;
   justify-content: center;
   align-items: center;
-  bottom: 20px;
+  top: 20px;
+  left: 20px;
   width: 100%;
   z-index: 200;
   color: var(--font-color);
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 .homepage-content {
   color: var(--font-color);
-  text-align: center;
-  position: absolute;
+  text-align: right;
+  position: fixed;
+  justify-content: flex-end;
+  align-items: flex-end;
   top: 0%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  right: 3rem;
   width: 100%;
   z-index: 1000;
-  
+
 }
+
+#homepage-nav {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  text-align: end;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 20px;
+  position: fixed;
+  right: 10px;
+  width: 50%;
+  z-index: 1;
+  top: 2rem;
+  /* 2rem under top for desktop */
+}
+
 .homepage-content {
-  margin-top: 2rem; /* Positioning under the navigation bar */
+  margin-top: 2rem;
+  /* Positioning under the navigation bar */
 }
+
 .H1class {
-  font-family: 'Times New Roman', Times, serif;
   margin-bottom: 0px;
   margin-top: 5px;
 }
 
 .home-button {
-  background-color: rgb(118, 76, 21);
-  color: var(--font-color);
+  background-color: #4343434c;
+  color: rgb(255, 255, 255);
   padding: 8px 16px;
   text-decoration: none;
   margin: 0.5rem;
   display: inline-block;
   border-radius: 1.3rem;
-  transition: all 0.1s ease-in-out;
+  /* box-shadow: 0 0.125rem 0.125rem #00000045; */
+  box-shadow: 0 0 0.5rem #51515145;
+  transition: all 0.3s ease-in-out;
 }
 
 .home-button:hover {
-  background-color: #ffffff;
+  outline: 0 !important;
   color: #000000;
+  background-color: #00000000;
+  box-shadow: none;
 }
 
 .H2class {
-  font-family: 'Times New Roman', Times, serif;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,21 +178,29 @@ body {
 }
 
 @keyframes typing {
-  from { width: 0 }
-  to { width: 39ch }
+  from {
+    width: 0
+  }
+
+  to {
+    width: 36ch
+  }
 }
 
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: lightblue }
+
+  from,
+  to {
+    border-color: transparent
+  }
+
+  50% {
+    border-color: lightblue
+  }
 }
 
 @media (max-width: 800px) {
-  #homepage-nav {
-    top: 0; /* Adjust position for mobile */
-    padding: 10px;
-    flex-direction: column;
-  }
+
 
   .home-button {
     margin-top: 0.5rem;
@@ -150,9 +209,9 @@ body {
   }
 
   .homepage-content {
-    
+
     width: max-content;
-    top: 30%;
+    top: 10rem;
     left: 30%;
     margin: 0px;
     padding: 0px;
@@ -166,19 +225,26 @@ body {
     border-radius: 0px;
   }
 
+
   .H2class {
-    height: auto;
-    padding-top: 5rem;
+    height: 100vh;
   }
 
   #animated-text {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
     font-size: 1rem;
-    margin-top: 55%;
+    border-right: .15em solid lightblue;
+    width: 0;
+    position: absolute;
+    top: 6rem;
+    /* Positioning 3rem above the bottom */
   }
 
-  .indexfooter {
-    bottom: 2rem;
-  }
+
+
+
 
   p {
     color: var(--font-color);
@@ -187,9 +253,11 @@ body {
   #particles-js {
     display: none;
   }
-  .indexfooter h1{
+
+  .indexfooter h1 {
     font-size: 2rem;
   }
+
   .indexfooter p {
     color: var(--font-color);
   }
