--- a/my webby - Copy/Cproject.css
+++ b/my webby - Copy/Cproject.css
@@ -1,13 +1,53 @@
+/* achievements only */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+
+
+h1{
+  margin-top: 0;
+  
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
+
+#food{
+  padding-top: 0.4rem;
+}
+
+
+.Achh3{
+  font-size: 5rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+}
+
 /*projects start */
-@media (min-width: 967px) {
+
+
+
+
+
+
+
+
+
+
+.container{
+  
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 100vw;
+  
+}
+
 
   nav ul li a.active {
     background-color: #ffffff;
     color: black;
     border-radius: 4px;
-    padding:7.5px 20px;
+    padding: 0.4rem 0.7rem;
     margin:none;
-    font-size: 14px;
   
     text-decoration: none;
     /* Add any other styles you want for the active link */
@@ -16,26 +56,25 @@
   nav ul li a:hover {
     background-color: #ffffff;
     color: black;
-    border-radius: 4px;
-    padding:7.5px 20px;
+    padding: 0.4rem 0.7rem !important;
     margin:none;
-    font-size: 14px;
   
     text-decoration: none;
     /* Add any other styles you want for the active link */
   }
-}
+
 
 
 /*download buttons*/
 .proj1links {
-  background-color: rgba(20, 23, 28, 1);
+  background-color: rgba(20, 23, 28, 0);
+  outline: 1.4px solid rgb(255, 255, 255);
   color: #ffffff;
-  padding: 0.5% 1%;
+  padding: 0.5rem 1rem;
   display: inline-flex;
   margin: 0 0.4rem;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 50px;
   max-width: max-content;
   justify-content: center;
   /* Add this line to center the button contents */
@@ -52,7 +91,8 @@
 .proj1links:hover {
   background-color: #ffffff;
   color: #000000;
-  transform: scale(1.1);
+  transition: background-color 0.3s ease-in-out;
+  transform: scale(1);
   text-decoration: none;
 }
 
@@ -109,7 +149,7 @@
 }
 
 #edes2{
-  width: 40vw;
+  width: 40%;
   height: auto;
   padding-bottom: 10px;
   margin-bottom: 10px;
@@ -154,9 +194,10 @@
 
 
 .project.hidden {
-  display: none;
-  /* Hide inactive projects */
+  
+display: none;
 }
+/* Hide inactive projects */
 
 .secondary-nav {
 
@@ -166,15 +207,16 @@
 }
 
 .secondary-nav-button {
-  font-size: 25px;
-  background-color: rgba(20, 23, 28, 1);
+  font-size: 1.2rem;
+  background-color: rgba(20, 23, 28, 0);
+  outline: 1.4px solid rgb(255, 255, 255);
 
   color: #fff;
   padding: 8px 16px;
   text-decoration: none;
   border-color: rgb(255, 255, 255);
   border-style: none;
-  border-radius: 5px;
+  border-radius: 50px;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -189,7 +231,7 @@
 
 .secondary-nav-button:hover {
   background-color: #ffffff;
-  transform: scale(1.05);
+  transform: scale(1);
   color: #000000;
   outline: none;
 
@@ -216,11 +258,11 @@
 }
 
 .arrow-left {
-  left: 30px;
+  left: 1rem;
 }
 
 .arrow-right {
-  right: 30px;
+  right: 1rem;
 }
 
 .arrow i {
@@ -228,7 +270,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 2em;
+  font-size: 1.8rem;
 }
 
 
@@ -271,8 +313,8 @@ project.hidden {
 
 h3 {
 
-  padding-top: 20px;
-  margin-top: none;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 
@@ -285,10 +327,10 @@ h3 {
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 800px) {
 
   #edes2 img{
-    width: 80vw;
+    width: 80%;
     height: auto;
 
   }
@@ -311,29 +353,66 @@ h3 {
     padding: 0 35px;
     /* Add padding to ensure text doesn't go under arrows */
     /* rest of your styles */
-    font-size: 13px;
+   
   }
 
 
 
   .arrow-left {
-    left: 5px;
+    left: 0px;
   }
 
   .arrow-right {
-    right: 5px;
+    right: 4px;
   }
 
   .arrow i {
     font-size: 1em;
   }
-
+  .proj1links{
+    border-radius: 5px;
+  }
 
   .secondary-nav-button {
-    font-size: 15px;
     padding: 8px 8px;
     border-radius: 5px;
   }
+
+
+
+
+  
+
+
+
+
+  
+
+
+  nav ul li a.active {
+    background-color: #ffffff;
+    color: black;
+    border-radius: 4px;
+    padding: 0.6rem;
+    margin:none;
+  
+    text-decoration: none;
+    /* Add any other styles you want for the active link */
+  }
+  
+  nav ul li a:hover {
+    background-color: #ffffff;
+    color: black;
+    padding: 0.6rem !important;
+    margin:none;
+  
+    text-decoration: none;
+    /* Add any other styles you want for the active link */
+  }
+  #project3, #project1{
+    padding-bottom: 10px;
+  }
+
 
 
 
