--- a/my webby - Copy/Ccontact.css
+++ b/my webby - Copy/Ccontact.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
+body, html {
+  overflow-y: visible;
+}
+
 .container{
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: auto;
   
   
 }
