--- a/my webby - Copy/Cproject.css
+++ b/my webby - Copy/Cproject.css
@@ -1,12 +1,26 @@
 /* achievements only */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 h1{
   margin-top: 0;
   
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
+}
+
+body, html{
+
+  width: 100vw;
+  height: 100vh;
+  max-height: max-content;
+  overflow-x: hidden; /* Ensure no horizontal overflow */
+  overflow-y: auto;
+
 }
 
 
@@ -25,6 +39,10 @@ h1{
     overflow-x: hidden; /* Ensure no horizontal overflow */
   
   }
+}
+
+#Achh2{
+  margin-bottom: 1rem;
 }
 
 .Achh3{
@@ -54,8 +72,8 @@ h1{
   
   display: flex;
   justify-content: center;
-  width: 100vw;
-  height: 100vw;
+  width: auto;
+  height: auto;
   
 }
 
@@ -212,7 +230,6 @@ h1{
 
 
 .project.hidden {
-  
 display: none;
 }
 /* Hide inactive projects */
@@ -222,7 +239,10 @@ display: none;
   display: flex;
   justify-content: center;
   gap: 10px;
+  transition: background-color 0.04s ease-in-out;
+  
 }
+
 
 .secondary-nav-button {
   font-size: 1.2rem;
@@ -280,7 +300,7 @@ display: none;
 }
 
 .arrow-right {
-  right: 1rem;
+  right: 2rem;
 }
 
 .arrow i {
@@ -300,6 +320,7 @@ project.hidden {
 
 .project:not(.hidden) {
   opacity: 1;
+  width: auto;
   text-decoration: none;
   visibility: visible;
   padding-top: 2%;
