--- a/my webby - Copy/Cstyles.css
+++ b/my webby - Copy/Cstyles.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
@@ -7,24 +6,39 @@
   --h3-color: #ffffff; /* Main color for headings */
   --back-color: #29312c; /* Background color */
   --para-color: #bdc3c7; /* Default text color */
-  --backtransparent-color: #1d1d1d; /* Background color */
+  --backtransparent-color: #1d1d1d00; /* Navbar color */
 }
 
 html {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300; 
- 
 }
-h3{
+
+h3 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-
 }
 
+body {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+body.fade-in {
+  opacity: 1;
+}
+
+/* Fade out state */
+body.fade-out .container {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
 
 body {
-  
-  
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -41,6 +55,7 @@ header {
   align-items: center;
   justify-content: center; /* Changed from space-between to center */
   background: var(--backtransparent-color);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.231); /* Adds a solid black line with a thickness of 2px */
   position: relative;
   width: 100%;
   z-index: 1000;
@@ -114,8 +129,7 @@ nav ul {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center; /* Align items to the start of the nav */
-
+  justify-content: right; /* Align items to the start of the nav */
   list-style: none;
   margin: 0;
 }
@@ -144,19 +158,19 @@ nav ul li a.active {
   text-decoration: none;
 }
 
-
-
 @media (max-width: 800px) {
+  header {
+    border-bottom: none;
+  }
+
   .secondary-nav {
     margin-right: 2rem;
     display: flex;
     flex-wrap: wrap;
-    
     justify-content: center; /* Adjust as needed */
     gap: 10px; /* Space between buttons */
     font-size: 0.9rem;
   }
-  
 
   nav ul li a:hover {
     background-color: #ffffff; /* Change to desired background color */
@@ -165,18 +179,14 @@ nav ul li a.active {
     padding: 0.6rem; /* Larger padding for easier touch */
     margin-bottom: 0.5rem;
     margin-right: 0; /* Remove right margin for stacked items */
-    
-    
     text-decoration: none;
   }
-
 
   .hamburger-menu {
     display: block;
     position: absolute;
     top: 0.5rem; /* Adjust as necessary */
     right: 20px; /* Adjust as necessary */
-
     z-index: 20; /* Above other content */
     cursor: pointer;
   }
@@ -186,10 +196,8 @@ nav ul li a.active {
     height: 3px;
     background-color: #fff;
     margin: 5px 0;
-    
     transition: 0.4s;
   }
-
 
   nav ul li a.active {
     padding: 0.6rem; /* Larger padding for easier touch */
@@ -197,7 +205,6 @@ nav ul li a.active {
     font-size: 1rem;
     margin-right: 0; /* Remove right margin for stacked items */
   }
-
 
   nav ul {
     display: none; /* Hidden by default */
@@ -215,13 +222,12 @@ nav ul li a.active {
     z-index: 1000;
   }
 
-  nav ul.showa{
+  nav ul.showa {
     display: flex; /* Show the nav when the class is added */
   }
 
   nav ul li {
-    padding: 0 0;
- /* Add padding to each link */
+    padding: 0; /* Add padding to each link */
     justify-content: center; /* Center the items on small screens */
     padding-left: 0; /* Remove padding on small screens */
   }
